[package]
name = "zipenhancer-rs"
version = "0.1.0"
edition = "2024"
authors = ["XiaoYang:yyc201806@gmail.com"]
description = "Rust version of ZipEnhancer audio denoising processor"
license = "MIT"
repository = "https://github.com/go-restream/zipenhancer-rs"

[[bin]]
name = "zipenhancer"
path = "src/main.rs"

[lib]
name = "zipenhancer"
path = "src/lib.rs"

[dependencies]
# onnxruntime-rs
onnxruntime = "0.0.14"
libc = "0.2"
libloading = "0.8"

# Audio processing
hound = "3.5"
ndarray = "0.15"
cpal = "0.15"

# Command line interface
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# System information
num_cpus = "1.16"

# Time utilities
time = "0.3"

# Async runtime (if needed)
# tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

# [[bench]]
# name = "audio_processing"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true